--- a/src/components/product-card/ProductCard.css
+++ b/src/components/product-card/ProductCard.css
@@ -45,6 +45,15 @@
     color: darkgray;
     margin-left: 6px !important;
   }
+
+  .product-description {
+    padding: 10px;
+    color: darkgray;
+    margin-left: 6px !important;
+    height: 48px;
+    overflow: hidden;
+    display: block;
+  }
   
   .buttons {
     display: flex;
