--- a/src/components/product-detail-page/ProductDetailPage.css
+++ b/src/components/product-detail-page/ProductDetailPage.css
@@ -16,9 +16,15 @@
 .place-order-button {
     background-color: #3f51b5 ;
     color: white;
-    padding: 10px;
+    width: 415px;
+    height: 40px;
     border-radius: 5px;
     border: 1px solid #3f51b5;
+    font-size: 1.1rem;
+    font-weight: 600;
+    cursor: pointer;
+    transition: background 0.2s;
+    padding: 0;
 }
 
 .name-quantity {
@@ -69,6 +75,7 @@
   margin-right: 40px;
   overflow: hidden;
 }
+
 .product-detail-image {
   width: 412px;
   height: 420px;
